projects/playground/src/app/pages/select/select.page.scss
.grid {
  grid-template-columns: 300px 300px;
  // grid-template-columns: 72px 72px;
}

//! styling for templates
.option-wrapper {
  display: flex;
  align-items: center;
  gap: 8px;
  padding-left: 1px;
}
.color-display {
  width: 16px;
  height: 16px;
  border: 1px solid black;
  display: inline;
}
.count-display {
  padding: 0 3px;
  font-size: 90%;
  background: var(--ard-detail-ultralight);
  color: var(--ard-text3);
  border-radius: 5px;
  position: relative;
  bottom: 1px;
}
.wide-select {
  width: 80vw;
}

